--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <h2>I am a web Developer</h2>
     <hr/>
              <!-- TODO 2: Add Your previous projects' HTML into the public folder -->
-            <h3><a href="./public/movie-ranking.html>">Movi Ranking project  </a>
+            <h3><a href="./public/movie-ranking.html"> Movi Ranking project  </a>
             </h3>
             <!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
             <img src="./assets/images/Top-3_movies-project.png" height="200" >
